Fix some lint warning, used resources